Added required parameters to the main method of CoordinateTestDataGenerator (path to shapefile and database parameters). Also added a main method for EpsgShapeFileReader. Also added documentation for both the above methods regarding a workaround for the problem with 'java.lang.IllegalAccessException:'