@@ -6,14 +6,13 @@ import org.geotools.data.*
 import org.opengis.feature.simple.SimpleFeature
 import java.io.File
 
-// Note that if you do not have shapefile at the class path
+// Note that if you do not have "gt-shapefile" at the class path
 // there will be a "silent error" i.e. null will be returned
 // without information that "gt-shapefile" is missing ...
 // build.gradle
 //compile group: 'org.geotools', name: 'gt-shapefile', version: '20.0'
 //compile group: 'org.geotools', name: 'gt-data', version: '20.0'
 // http://docs.geotools.org/latest/userguide/welcome/architecture.html
-
 
 class EpsgShapeFileReader {
 
@@ -49,6 +48,47 @@ class EpsgShapeFileReader {
         }
         return rowsOfAttributeTable
     }
+
+    companion object {
+        @JvmStatic
+
+        // Potential problem when you run the main method below:
+        //      java.lang.IllegalAccessException: class org.geotools.resources.NIOUtilities$1 cannot access class jdk.internal.ref.Cleaner (in module java.base) because module java.base does not export jdk.internal.ref to unnamed module @4d49af10
+        // Workaround solution: Add the following to VM options:
+        //      --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+        // Some more information about the above "add-exports":
+        //      https://docs.oracle.com/javase/9/migrate/toc.htm
+
+        /**
+         *  The method needs a parameter which is a full path to a shapefile
+         *  (e.g. use the absolute path for a file such as ...\crsCodeGeneration\data_files\EPSG_Polygons_Ver_9.2.1\EPSG_Polygons.shp )
+         */
+        fun main(args: Array<String>) {
+            if(args.size < 1) {
+                println("You must provide the full path to an EPSG shapefile")
+                return
+            }
+            val file = File(args[0])
+            if(!file.exists()) {
+                println("The shapefile does not exist: " + file.canonicalPath)
+                return
+            }
+            val epsgShapeFileReader = EpsgShapeFileReader()
+            val rowsOfAttributeTableAndCentroid = epsgShapeFileReader.extractAttributeDataFromShapefile(file.canonicalPath)
+            for (item in rowsOfAttributeTableAndCentroid) {
+                if(item.AREA_NAME.toUpperCase().contains("SWEDEN")) {
+                    println("AREA_CODE: " + item.AREA_CODE)
+                    println("AREA_NAME: " + item.AREA_NAME)
+                    println("LABEL: " + item.LABEL)
+                    println("REGION: " + item.REGION)
+                    println("VERSION: " + item.VERSION)
+                    println("centroidX: " + item.centroidX)
+                    println("centroidY: " + item.centroidY)
+                }
+            }
+        }
+    }
+
 }
 
 data class RowOfAttributeTableAndCentroid(
